test/invalid-semantics/58248_wrong_type_if/wrong_type_if.mag
-- Author: 58248, Afonso Topa
-- Type checker can't know this program is valid

fun main(_) : Bool -> Int =
  if true then 5 else false


